# NextGram-API

./: .gitignore  Dockerfile  Dockerfile.base  admin  docker-compose.yml  pyproject.toml  requirements.txt  requirements_OLD.txt
accounts/: backends.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_rename_profileimg_profile_profile_img_profile_phone_and_more.py  0003_remove_profile_user_name.py  0004_profile_email_alter_profile_id_user_and_more.py  0005_remove_profile_email.py  0006_remove_profile_id_user.py  0007_remove_profile_phone.py  0008_profile_phone.py  0009_alter_profile_phone.py  0010_profile_id_user.py  0011_profile_gender_profile_website.py  0012_profile_following.py  0013_alter_profile_profile_img.py  0014_profile_post_count.py  0015_interest.py  0016_profile_interests.py  0017_remove_interest_id_alter_interest_name.py  0018_remove_profile_interests_delete_interest.py  0019_interest_profile_interests.py
chat/: admin.py  apps.py  consumers.py  models.py  routing.py  truncate.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_alter_usercommunication_options.py  0002_room_presence.py  0003_alter_usercommunication_options.py  0003_rename_converdation_id_conversation_conversation_id.py  0004_chats_conversations_delete_chat_and_more.py  (+5 more)
csrf_token/: apps.py  urls.py  views.py
post/: admin.py  consumers.py  forms.py  models.py  routing.py  tests.py  urls.py  views.py
posts/: models.py  urls.py  views.py
search/: urls.py  views.py
social_media_backend/: asgi.py  settings.py  urls.py  views.py
(+25 files in other folders)
