[tool.poetry]
name = "nextgram-api"
version = "0.1.0"
description = "api for nextgram"
authors = ["AnanthuTD"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "5.0.3"
psycopg-binary = "^3.1.18"
psycopg = "^3.1.18"
psycopg-c = "^3.1.18"
pillow = "^10.2.0"
channels-redis = "^4.2.0"
channels = "^4.0.0"
dotenv = "^0.0.5"
daphne = "^4.1.0"

[tool.poetry.group.dev.dependencies]
Faker = "^24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
