[tool.poetry]
name = "nextgram-api"
version = "0.1.0"
description = "api for nextgram"
authors = ["AnanthuTD"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "5.0.3"
psycopg-binary = "^3.1.18"
psycopg = "^3.1.18"
pillow = "^10.2.0"
channels-redis = "^4.2.0"
channels = "^4.0.0"
daphne = "^4.1.0"
python-dotenv = "^1.0.1"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
jsonschema = "^4.22.0"

[tool.poetry.group.dev.dependencies]
Faker = "^24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
